// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "8f3e52a9b8545309d0ffaa9ebffcbb84",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "a0203abac1b07f3976b60142152c5321",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "b65fc053031ca1206c0fa2691555a8c8",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "31cec3535b9b256940a8bc36b8848c84",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "a236c22bf156d52b256ef81fb4fcd6e6",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "b3ffa2077b5b7282f540bd50461fbd7a",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "eb995096a6847545dc20ade2fe9ebfd2",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "825fdd1fad886745f266e23f7c28f481",
  "vendors.f70bd1abd9b21b472611.js.map": "004fdc6786953cf0d680b867e8226d7c",
}
`;
